--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- links and stuff -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="https://cdn3.emoji.gg/emojis/13152-white-bow.png">
+	<link rel="icon" type="image/x-icon" href="https://www.pngmart.com/files/22/Mazda-Miata-PNG-Transparent.png">
 	<meta property="og:title" content="hafsneeze"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://hafsneeze.github.io/dc"/>
@@ -24,7 +24,7 @@
             <h1>about</h1>
 		<br>
 		<h5>scroll down..</h5>
-		     <img src="https://th.bing.com/th/id/R.a137137295e4a87d6c75cd34aab13fb8?rik=qfYOoEgpOv3Umg&pid=ImgRaw&r=0" height=100px>
+		     <img src="https://th.bing.com/th/id/R.a137137295e4a87d6c75cd34aab13fb8?rik=qfYOoEgpOv3Umg&pid=ImgRaw&r=0">
 	    </div>
             <!-- content -->
             <p>welcome!</p>
