--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>about</h1>
 		<br>
 		<h5>scroll down..</h5>
-		     <img src="https://th.bing.com/th/id/R.a137137295e4a87d6c75cd34aab13fb8?rik=qfYOoEgpOv3Umg&pid=ImgRaw&r=0">
+		     <img src="https://th.bing.com/th/id/R.a137137295e4a87d6c75cd34aab13fb8?rik=qfYOoEgpOv3Umg&pid=ImgRaw&r=0" height=200px>
 	    </div>
             <!-- content -->
             <p>welcome!</p>
