--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <!-- bubble cursor trail -->	
     <script type="text/javascript">
 var colours=new Array("white", "white", "white", "white", "white"); // colours for top, right, bottom and left borders and background of bubbles
-var bubbles=50; 
-var over_or_under="over";
+var bubbles=500; 
+var over_or_under="under";
 var x=ox=400;
 var y=oy=300;
 var swide=800;
