--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 <body>
     <header>
+	<div></div>
         <h1>hafiz's website</h1>
     </header> 
     <main class="container-fluid">
 	    <div style="width:100%;height:0;padding-bottom:130%;position:relative;">
-		    <div> kosmos </div>
             <h1>about</h1>
 		<br>
 		<h5>scroll down..</h5>
